--- a/pom.xml
+++ b/pom.xml
@@ -5,74 +5,26 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.ignite</groupId>
 	<artifactId>bookshare-backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>bookshare-backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Bookshare project for Ignite and Spring Boot</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<h2.version>1.4.197</h2.version>
 	</properties>
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-web</artifactId>-->
-<!--		</dependency>-->
-
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-
-<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;			<groupId>org.apache.ignite</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<artifactId>ignite-spring</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<version>2.10.0</version>&ndash;&gt;-->
-<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.apache.ignite</groupId>-->
-<!--			<artifactId>ignite-spring-data_2.2</artifactId>-->
-<!--			<version>2.9.1</version>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.apache.ignite</groupId>-->
-<!--			<artifactId>ignite-spring-boot-autoconfigure-ext</artifactId>-->
-<!--			<version>1.0.0</version>-->
-<!--		</dependency>-->
-
-<!--		&lt;!&ndash; https://mvnrepository.com/artifact/javax.inject/javax.inject &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>javax.inject</groupId>-->
-<!--			<artifactId>javax.inject</artifactId>-->
-<!--			<version>1</version>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>javax.xml.bind</groupId>-->
-<!--			<artifactId>jaxb-api</artifactId>-->
-<!--			<version>2.3.0</version>-->
-<!--		</dependency>-->
-
-<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;			<groupId>org.gridgain</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<artifactId>control-center-agent</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<version>2.10.0.0</version>&ndash;&gt;-->
-<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.gridgain</groupId>-->
-<!--			<artifactId>gridgain-core</artifactId>-->
-<!--			<version>6.6.9</version>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -97,6 +49,11 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 	</dependencies>
