--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
