--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.github.librepdf</groupId>
-			<artifactId>openpdf</artifactId>
-			<version>1.3.8</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
 		</dependency>
 
 		<dependency>
