--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=9001
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 
+server.servlet.session.timeout=20m
+
 spring.thymeleaf.prefix=classpath:/
 spring.thymeleaf.suffix=.html
 
